--- a/css/home.css
+++ b/css/home.css
@@ -1,8 +1,13 @@
-/* Home - Main section */
+/* Home  */
 
-.main__section{
-    margin-top: 200px;
+/** First Section 
+includes Video */
+
+.main__section:nth-child(1){
+    margin-top: 100px;
     position: relative;
+    padding-bottom: 120px;
+    overflow: hidden;
 }
 
 .section__video{
@@ -14,21 +19,28 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -65%);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     color: var(--white-color);
     z-index: 999;
+    width: 100%;
     div{
-        width: 50%;
-        margin: auto;
+        padding: 16px;
         h1{
-            font-size: var(--h1-size);
+            font-size: var(--h1-size-res);
+        }
+        p{
+            strong{
+                font-weight: 900;
+            }
         }
         div{
             margin: 0;
             display: flex;
             align-items: center;
+            padding: 0;
             h4{
                 font-size: var(--h4-size);
                 padding-right: 10px;
@@ -39,17 +51,20 @@
                 height: 20px;
             }
         }
-        p{
-            font-weight: 100;
-        }
     }
 }
 
-.carrousel{
-    width: 35vw;
+.section__carrousel{
+    display: inherit;
+    justify-content: center;
+}
+
+.carrousel_img{
+    width: 100%;
     height: 100%;
 }
-.overlaid{
+
+.section__overlaid{
     background: linear-gradient(to top, rgb(0, 0, 0), transparent 100%);
     position: absolute;
     z-index: 99;
@@ -57,4 +72,246 @@
     right: 0;
     bottom: 0;
     left: 0;
+    height: 550px;
+}
+
+/** Second section 
+inlcudes cards */
+
+.main__section{
+    background-color: var(--section-bg-color);
+}
+
+.section__h2{
+    display: flex;
+    justify-content: center;
+    font-size: var(--h2-size-res);
+    margin-bottom: 48px;
+}
+
+.section__container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-bottom: 120px;
+}
+
+.card_img{
+    position: relative;
+    img{
+        width: 100%;
+        height: 100%;
+    }
+}
+
+.card__tag{
+    background: var(--secondary-color);
+    border-radius: 5px;
+    color: var(--white-color);
+    display: inline-block;
+    padding: 4px 12px;
+}
+
+.tag{
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 20px;
+}
+
+.card__info{
+    padding: 20px 20px 30px 20px;
+    font-size: 18px;
+    div:nth-child(1){
+        align-items: center;
+        display: flex;
+        gap: 20px;
+        h4{
+            font-size: var(--h4-size);
+        }
+        p{
+            background: var(--white-color);
+            border-radius: 100px;
+            color: var(--secondary-color);
+            font-weight: 900;
+            display: inline-block;
+            width: 84px;
+            height: 64px;
+            line-height: 64px;
+            text-align: center;
+            box-shadow: 0px 0px 50px rgba(0, 0, 0, .175);
+        }
+    }
+    div:nth-child(2){
+        display: flex;
+        gap: 20px;
+        align-items: center;
+        margin-block: 5px;
+        h6{
+            font-size: var(--h6-size-res);
+        }
+        div{
+            gap: 0;
+            svg{
+                color: #f3d634;
+                width: 20px ;
+                height: 20px;
+            }
+        }
+        p{
+            color: var(--p-color);
+        }
+    }
+}
+
+
+/** Third section 
+Static image */
+
+.main_img{
+    background-image: url("/assets/images/bg/bg01.jpg");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 500px;
+    margin-bottom: 120px;
+}
+
+
+/** Fourth section 
+News & Events */
+
+.section__container{
+    padding-inline: 16px;
+    gap: 20px;
+}
+
+.section_events{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    div{
+        position: relative;
+        padding-bottom: 20px;
+        img{
+            width: 100%;
+            height: 100%;
+        }
+        h5{
+            z-index: 99;
+            position: absolute;
+            color: var(--white-color);
+            font-size: var(--h5-size);
+            bottom: 30px;
+            left: 20px;
+        }
+    }
+}
+
+.section_news{
+    div{
+        padding-bottom: 20px;
+        img{
+            width: 100%;
+            height: 100%;
+        }
+    }
+}
+
+.event__tag{
+    background: var(--primary-color);
+    border-radius: 5px;
+    color: var(--white-color);
+    display: inline-block;
+    padding: 4px 12px;
+}
+
+.event_tag--promociones{
+    background-color: rgb(93, 190, 247);
+}
+
+.event_tag--noticias{
+    background-color: black;
+}
+
+.tag{
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 20px;
+}
+
+
+/** Responsive Media */
+
+/** Media 576px*/
+@media (min-width: 576px) {
+    .carrousel_img{
+        width: 544px;
+        height: 100%;
+    }
+    .section__text{
+        width: 544px;
+        div:nth-child(1){
+            padding: 0;
+        }
+    }
+}
+
+/** Media 992px */
+@media (min-width: 992px) {
+    .carrousel_img{
+        width: 100%;
+        height: 100%;
+    }
+    .section__text{
+        flex-direction: row;
+        padding-inline: 100px;
+        gap:100px;
+        width: 100%;
+        div:nth-child(1){
+            width: 28%;
+            align-items: center;
+            align-self: center;
+            padding: 16px;
+            h1{
+                font-size: var(--h1-size);
+            }
+        }
+    }
+    .card_img{
+        img{
+            width: 340px;
+            height: 100%;
+        }
+    }
+    .card__info{
+        div:nth-child(1){
+            h4{
+                font-size: var(--h4-size);
+            }
+        }
+    }
+    .section__h2{
+        font-size: var(--h2-size);
+    }
+    .section__container{
+        padding-inline: 5%;
+        justify-content: space-evenly;
+    }
+    .section_events{
+        flex-direction: row;
+    }
+    .section_news{
+        flex-direction: row;
+        display: flex;
+        gap: 20px;
+        div{
+            img{
+                width: 100%;
+                height: auto;
+            }
+        }
+    }
 }
