--- a/css/main.css
+++ b/css/main.css
@@ -9,11 +9,14 @@
     --font-family:             'Montserrat', sans-serif;
 
     --h1-size:                 76px;
+    --h1-size-res:             38px;
     --h2-size:                 56px;
+    --h2-size-res:             32px;
     --h3-size:                 42px;
     --h4-size:                 28px;
     --h5-size:                 26px;
     --h6-size:                 22px;
+    --h6-size-res:             18px;
     --p-size:                  18px;
     
     --white-color:                  #FFFFFF;
@@ -30,6 +33,6 @@
 
 /* Estilos en comun a todas las páginas */
 body {
-    background: var(--white-color);
+    background: var(--section-bg-color);
     font-family: var(--font-family);    
 }
