--- a/css/home.css
+++ b/css/home.css
@@ -122,6 +122,7 @@ inlcudes cards */
 .card__info{
     padding: 20px 20px 30px 20px;
     font-size: 18px;
+    background-color: var(--section-bg-color);
     div:nth-child(1){
         align-items: center;
         display: flex;
