--- a/css/main.css
+++ b/css/main.css
@@ -1,35 +1,42 @@
 /* Reset params */
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
 /* Variables de estilo*/
 :root {
-    --font-family:             'Montserrat', sans-serif;
+    --font-family: 'Montserrat', sans-serif;
 
-    --h1-size:                 76px;
-    --h2-size:                 56px;
-    --h3-size:                 42px;
-    --h4-size:                 28px;
-    --h5-size:                 26px;
-    --h6-size:                 22px;
-    --p-size:                  18px;
-    
-    --white-color:                  #FFFFFF;
-    --black-color:                  #000000;
-    --primary-color:                #f44749;
-    --secondary-color:              #f3af24;
-    --section-bg-color:             #F9F9F9;
-    --title-color:                  #565758;
-    --news-title-color:             #292828;
-    --p-color:                      #717275;
-    --border-color:                 #eaeaea;
+    --h1-size: 76px;
+    --h2-size: 56px;
+    --h3-size: 42px;
+    --h4-size: 28px;
+    --h5-size: 26px;
+    --h6-size: 22px;
+    --p-size: 18px;
+
+    --font-weight-light: 300;
+    --font-weight-normal: 400;
+    --font-weight-semibold: 600;
+    --font-weight-bold: 700;
+
+    --white-color: #FFFFFF;
+    --black-color: #000000;
+    --primary-color: #f44749;
+    --secondary-color: #f3af24;
+    --section-bg-color: #F9F9F9;
+    --title-color: #565758;
+    --news-title-color: #292828;
+    --p-color: #717275;
+    --border-color: #eaeaea;
+
+
 }
 
 
 /* Estilos en comun a todas las páginas */
 body {
     background: var(--white-color);
-    font-family: var(--body-font-family);    
+    font-family: var(--body-font-family);
 }
