--- a/css/main.css
+++ b/css/main.css
@@ -21,12 +21,12 @@
     
     --white-color:                  #FFFFFF;
     --black-color:                  #000000;
-    --primary-color:                #f44749;
+    --primary-color:                #dc3545;
     --secondary-color:              #f3af24;
     --section-bg-color:             #F9F9F9;
     --title-color:                  #565758;
     --news-title-color:             #292828;
-    --p-color:                      #717275;
+    --p-color:                      #5b5b5b;
     --border-color:                 #eaeaea;
 }
 
