--- a/css/home.css
+++ b/css/home.css
@@ -5,7 +5,8 @@ includes Video */
 
 .main__section:nth-child(1){
     position: relative;
-    padding-bottom: 120px;
+    padding-top: 50px;
+    padding-bottom: 150px;
     overflow: hidden;
 }
 
@@ -71,7 +72,7 @@ includes Video */
     right: 0;
     bottom: 0;
     left: 0;
-    height: 550px;
+    height: 600px;
 }
 
 /** Second section 
