--- a/css/home.css
+++ b/css/home.css
@@ -62,6 +62,8 @@ includes Video */
 .carrousel_img{
     width: 100%;
     height: 100%;
+    box-shadow: 0px 5px 20px 0px black;
+    border-radius: 10px;
 }
 
 .section__overlaid{
@@ -153,17 +155,19 @@ inlcudes cards */
         }
         div{
             gap: 0;
-            svg{
-                color: #f3d634;
-                width: 20px ;
-                height: 20px;
-            }
         }
         p{
             color: var(--p-color);
         }
     }
 }
+
+/* Star icon */
+.ri-star-fill, .ri-star-line{
+    color: #f3d634;
+    font-size: 18px;
+}
+
 
 /** Third section 
 Static image */
