--- a/css/footer.css
+++ b/css/footer.css
@@ -5,24 +5,24 @@
     height: 700px;
     position: relative;
     display: flex;
-    h3, h6, .footer__social{
+    /* h3, h6, .footer__social{
         color: var(--white-color);
         padding: 10px;
-    };
-    h3{
+    }; */
+    /* h3{
         font-size: var(--h3-size);
         margin-bottom: 20px;
         text-align: center;
-    }
-    h6{
+    } */
+    /* h6{
         font-size: var(--h6-size);
         margin-top: 20px;
-    }
-    p{
+    } */
+    /* p{
         padding: 10px;
         color: #d1d1d1aa;
         font-size: var(--p-size);
-    }
+    } */
 }
 
 .footer::before{
@@ -44,11 +44,28 @@
 .footer__title{
     font-size: var(--h4-size);
     z-index: 999;
+    color: var(--white-color);
+    padding: 10px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.footer__subtitle{
+    color: var(--white-color);
+    padding: 10px;
+    font-size: var(--h6-size);
+    margin-top: 20px;
 }
 
 .footer__content{
     display: flex;
     flex-direction: column;
+}
+
+.footer__text{
+    padding: 10px;
+    color: #d1d1d1aa;
+    font-size: var(--p-size);
 }
 
 .footer__info{
@@ -59,13 +76,23 @@
 .footer__social{
     display: flex;
     justify-content: center;
-    div{
+    color: var(--white-color);
+    padding: 10px;
+    /* div{
         width: 35px;
         height: 35px;
         display: flex;
         align-items: center;
         justify-content: center;
-    }
+    } */
+}
+
+.social__icon{
+    width: 35px;
+    height: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .ri{
@@ -81,9 +108,11 @@
 }
 
 .footer__credit{
-    font-size: 14px !important;
+    font-size: 14px;
     text-align: center;
     margin-top: 50px;
+    color: var(--white-color);
+    padding: 10px;
 }
 
 /* MEDIA */
