--- a/css/contacto.css
+++ b/css/contacto.css
@@ -1,209 +1,90 @@
-/* Utilities */
-h1 {
-  font-size: var(--h1-size);
-  margin: 0;
+.section__contact {
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.9)), url("../assets/images/header/header04.jpg");
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10rem;
+  text-align: center;
+  position: relative;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  overflow: hidden;
 }
 
-h2 {
-  font-size: var(--h2-size);
-  margin: 0;
-}
-
-h3 {
-  font-size: var(--h3-size);
-  margin: 0;
-}
-
-h4 {
-  font-size: var(--h4-size);
-  margin: 0;
-  font-weight: var(--font-weight-semibold);
-}
-
-h5 {
-  font-size: var(--h5-size);
-  margin: 0;
-}
-
-h6 {
-  font-size: var(--h6-size);
-  margin: 0;
-}
-
-p {
-  font-size: var(--p-size);
-  margin: 0 0 1rem 0;
-  margin-block-start: 1em;
-  margin-inline-end: 1em;
-}
-
-.text-white {
+.section__contact-title h1,
+.section__contact-title p {
   color: var(--white-color);
 }
 
-.container {
-  width: 100%;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-  margin: 0 auto;
+.section__contact-title h1 {
+  font-size: 38px;
+  margin-bottom: 1rem;
 }
 
-@media (min-width: 992px) {
-  .container {
-    max-width: 960px;
-  }
+.section__contact-title p {
+  display: block;
+  font-weight: 900;
 }
 
-@media (min-width: 576px) {
-  .container {
-    max-width: 540px;
-  }
+.contact__main{
+  padding-inline: 16px;
+  padding-top: 110px;
 }
 
-.row {
+.contact__main-title{
+  font-size: var(--h4-size);
+  padding-bottom: 20px;
+}
+
+.contact__container{
   display: flex;
-  flex-wrap: wrap;
-  margin: 0 -1.5rem;
-  max-width: 100%;
+  flex-direction: column;
 }
 
-.row > * {
-  flex-shrink: 0;
-  width: 100%;
-  max-width: 100%;
-  padding: 0 0.5rem;
-  margin-top: 0.5rem;
-}
-
-.block {
-  /* padding: 0 0.5rem; */
-}
-
-.mx-auto {
-  margin: 0 auto;
-}
-
-.mt-5 {
-  margin-top: 3rem;
-}
-
-.mb-4 {
-  margin-bottom: 1.5rem;
-}
-
-.mt-4 {
-  margin-top: 1.5rem;
-}
-
-.pt-3 {
-  padding-top: 1rem;
-}
-
-@media (min-width: 1200px) {
-  .container {
-    max-width: 1140px;
-  }
-}
-
-@media (min-width: 992px) {
-  .mt-lg-5 {
-    margin-top: 3rem;
-  }
-}
-
-@media (min-width: 992px) {
-  .mb-lg-3 {
-    margin-bottom: 1rem;
-  }
-}
-
-.d-flex {
+.contact__line{
   display: flex;
-}
-
-.ms-5 {
-  margin-left: 3rem;
-}
-
-.ms-auto {
-  margin-left: auto;
-}
-
-.col-12 {
-  flex: 0 0 auto;
-  width: 100%;
-}
-
-.col-6 {
-  flex: 0 0 auto;
-  width: 50%;
-}
-
-@media (min-width: 992px) {
-  .col-lg-10 {
-    flex: 0 0 auto;
-    width: 83.3%;
+  justify-content: center;
+  & div{
+    display: flex;
+    width: 70%;
+    height: 2px;
+    background-color: var(--secondary-color);
+    margin-block: 20px;
   }
 }
 
-@media (min-width: 992px) {
-  .col-lg-6 {
-    flex: 0 0 auto;
-    width: 50%;
-  }
-}
-
-@media (min-width: 992px) {
-  .col-lg-5 {
-    flex: 0 0 auto;
-    width: 41.66%;
-  }
-}
-
-@media (min-width: 992px) {
-  .col-lg-4 {
-    flex: 0 0 auto;
-    width: 33.33%;
-  }
-}
-
-/* Header */
-
-.site-contact-header {
-  background-image: url("../assets/images/header/header04.jpg");
-}
-
-.site-header {
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  padding: 10rem 0;
+.contact__schedule{
+  display: flex;
+  flex-direction: column;
   text-align: center;
-  position: relative;
+  & p{
+    color: var(--p-color);
+    margin-block: 10px;
+    line-height: 1.5;
+  }
+  & h4{
+    font-size: var(--h4-size);
+    margin-bottom: 20px;
+  }
+  & h6{
+    font-size: var(--h6-size);
+    margin-top: 20px;
+  }
 }
 
-.site-header .container {
-  position: relative;
-  z-index: 2;
+.contact__map{
+  margin-block: 40px;
+  margin-bottom: 110px;
+  & h4{
+    font-size: var(--h4-size);
+    margin-bottom: 20px;
+  }
 }
 
-.overlay {
-  background: linear-gradient(to top, var(--black-color), transparent 100%);
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
 
-/* Contact */
-.contact {
-  margin: 0 auto;
-}
-
-.section-padding {
-  padding: 8rem 0;
-}
+/* Form */
 
 .form-label {
   color: var(--p-color);
@@ -217,15 +98,15 @@ label {
 }
 
 .custom-form .form-control {
-  margin-bottom: 1rem;
-  padding: 1.4rem 1rem;
+  margin-bottom: 25px;
   transition: all 0.3s;
+  width: 100%;
 }
 
 .form-control {
   display: block;
   width: 100%;
-  padding: 0.375rem 0.75rem;
+  height: 40px;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -247,9 +128,13 @@ textarea button {
   line-height: inherit;
 }
 
-input[type="text"] {
+input {
   padding-block: 1px;
   padding-inline: 2px;
+}
+
+.form-control-area{
+  height: 120px;
 }
 
 .custom-form button[type="submit"] {
@@ -277,4 +162,37 @@ input[type="text"] {
 
 #map {
   height: 15rem;
+}
+
+
+/* media */
+
+@media (min-width: 992px) {
+  .section__contact h1 {
+    font-size: var(--h1-size);
+  }
+
+  .contact__main{
+    padding-inline: 5%;
+  }
+
+  .contact__main-title{
+    font-size: var(--h2-size);
+    padding: 0;
+  }
+
+  .contact__container{
+    flex-direction: row;
+    width: 100%;
+    column-gap: 4rem;
+    padding-block: 2rem;
+  }
+
+  .contact__form, .contact__schedule{
+    width: 50%;
+  }
+
+  .contact__schedule{
+    margin: auto;
+  }
 }
