add modal de reservacion

--- a/css/reservacion.css
+++ b/css/reservacion.css
@@ -1,3 +1,7 @@
+body{
+    width: 100%;
+}
+
 .reservacion{
     background-color: rgba(0, 0, 0, 0.522);
     height: 100%;
@@ -6,14 +10,15 @@
     position:fixed;
     z-index: 99999;
     top: 0;
-    right: 0;
+    left: 0;
+    bottom: 0;
     overflow-y: scroll;
-    width: 90%;
+    width: 100%;
 }
 
-/* #reservacion-hide{
+.hideReservacion{
     display: none;
-} */
+}
 
 .reservacion__head{
     display: flex;
@@ -33,12 +38,14 @@
     background-color: white;
     padding: 50px;
     padding-top: 20px !important;
+    width: 80%;
 }
 
 .reservacion__container{
     width: 100%;
     height: auto;
     gap: 10px;
+    /* padding-bottom: 0; */
 }
 
 .reservacion__img{
@@ -75,5 +82,38 @@
         & button{
             font-size: 38px;
         }
+    }
+}
+
+/* Libreria de animacion */
+
+        /* fade in */
+.fade-in-top {
+	-webkit-animation: fade-in-top 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+        animation: fade-in-top 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+
+@-webkit-keyframes fade-in-top {
+    0% {
+        -webkit-transform: translateY(-50px);
+            transform: translateY(-50px);
+        opacity: 0;
+    }
+    100% {
+        -webkit-transform: translateY(0);
+            transform: translateY(0);
+        opacity: 1;
+    }
+}
+@keyframes fade-in-top {
+    0% {
+        -webkit-transform: translateY(-50px);
+            transform: translateY(-50px);
+        opacity: 0;
+    }
+    100% {
+        -webkit-transform: translateY(0);
+            transform: translateY(0);
+        opacity: 1;
     }
 }
