--- a/css/contacto.css
+++ b/css/contacto.css
@@ -186,7 +186,7 @@ input {
     flex-direction: row;
     width: 100%;
     column-gap: 4rem;
-    padding-block: 2rem;
+    padding-top: 2rem;
   }
 
   .contact__form, .contact__schedule{
