--- a/css/home.css
+++ b/css/home.css
@@ -25,28 +25,31 @@ includes Video */
     color: var(--white-color);
     z-index: 999;
     width: 100%;
-    & div{
-        padding: 16px;
-        padding-top: 80px;
-        & h1{
-            font-size: var(--h1-size-res);
-        }
-        & p{
-            & strong{
-                font-weight: 900;
-            }
-        }
-        & div{
-            margin: 0;
-            display: flex;
-            align-items: center;
-            padding: 0;
-            & h4{
-                font-size: var(--h4-size);
-                padding-right: 10px;
-            }
-        }
-    }
+}
+
+.section__header, .section__carrousel{
+    padding: 16px;
+    padding-top: 80px;
+}
+
+.section__title{
+    font-size: var(--h1-size-res);
+}
+
+.section__reviews{
+    font-weight: 900;
+}
+
+.section__rating{
+    margin: 0;
+    display: flex;
+    align-items: center;
+    padding: 0;
+}
+
+.section__rating-score{
+    font-size: var(--h4-size);
+    padding-right: 10px;
 }
 
 .section__carrousel{
@@ -93,12 +96,13 @@ inlcudes cards */
     padding-bottom: 120px;
 }
 
-.card_img{
+.card__image-container{
     position: relative;
-    & img{
-        width: 100%;
-        height: 100%;
-    }
+}
+
+.card__image{
+    width: 100%;
+    height: 100%;
 }
 
 .card__tag{
@@ -119,43 +123,25 @@ inlcudes cards */
 .card__info{
     padding: 20px 20px 30px 20px;
     font-size: 18px;
-    background-color: var(--section-bg-color);
-    & div:nth-child(1){
-        align-items: center;
-        display: flex;
-        gap: 20px;
-        & h4{
-            font-size: var(--h4-size);
-        }
-        & p{
-            background: var(--white-color);
-            border-radius: 100px;
-            color: var(--secondary-color);
-            font-weight: 900;
-            display: inline-block;
-            width: 84px;
-            height: 64px;
-            line-height: 64px;
-            text-align: center;
-            box-shadow: 0px 0px 50px rgba(0, 0, 0, .175);
-        }
-    }
-    & div:nth-child(2){
-        display: flex;
-        gap: 20px;
-        align-items: center;
-        margin-block: 5px;
-        & h6{
-            font-size: var(--h6-size-res);
-        }
-        & div{
-            gap: 0;
-        }
-        & p{
-            color: var(--p-color);
-        }
-    }
 }
+
+.news__header{
+    align-items: center;
+    display: flex;
+    gap: 20px;
+}
+
+.news__title{
+    font-size: var(--h4-size);
+}
+
+.news__footer{
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    margin-block: 5px;
+}
+
 
 /* Star icon */
 .ri-star-fill, .ri-star-line{
@@ -190,42 +176,45 @@ News & Events */
     display: flex;
     flex-direction: column;
     gap: 20px;
-    & div{
-        position: relative;
-        overflow: hidden;
-        & img{
-            width: 100%;
-            height: 100%;
-        }
-        & img:hover{
-            transform: scale(1.3);
-            transition: all 0.3s ease 0s;
-        }
-        & h5{
-            z-index: 99;
-            position: absolute;
-            color: var(--white-color);
-            font-size: var(--h5-size);
-            bottom: 30px;
-            left: 20px;
-        }
-    }
 }
 
-.section_news{
-    & div{
-        overflow: hidden;
-        position: relative;
-        
-        & img{
-            width: 100%;
-            height: 100%;
-        }
-        & img:hover{
-            transform: scale(1.3);
-            transition: all 0.3s ease 0s;
-        }
-    }
+.event{
+    position: relative;
+    overflow: hidden;
+}
+
+.event__image{
+    width: 100%;
+    height: 100%;
+}
+
+.event__image:hover{
+    transform: scale(1.3);
+    transition: all 0.3s ease 0s;
+}
+
+.event__title{
+    z-index: 99;
+    position: absolute;
+    color: var(--white-color);
+    font-size: var(--h5-size);
+    bottom: 30px;
+    left: 20px;
+}
+
+.news{
+    overflow: hidden;
+    position: relative;
+}
+
+.news__image{
+    width: 100%;
+    height: 100%;
+}
+
+.new__image:hover{
+    transform: scale(1.3);
+    transition: all 0.3s ease 0s;
 }
 
 .event__tag{
@@ -253,7 +242,6 @@ News & Events */
 
 
 /* Responsive Media */
-
 /* Media 576px*/
 @media (min-width: 576px) {
     .carrousel_img{
@@ -262,9 +250,9 @@ News & Events */
     }
     .section__text{
         width: 544px;
-        div:nth-child(1){
-            padding: 0;
-        }
+    }
+    .section__header{
+        padding: 0;
     }
 }
 
@@ -280,28 +268,23 @@ News & Events */
         gap:100px;
         width: 100%;
         transform: translate(-50%, -65%);
-        & div:nth-child(1){
-            width: 28%;
+    }
+    .section__header{
+        width: 28%;
             align-items: center;
             align-self: center;
             padding: 16px;
-            & h1{
-                font-size: var(--h1-size);
-            }
-        }
     }
-    .card_img{
-        & img{
-            width: 340px;
-            height: 100%;
-        }
+    .section__title{
+        font-size: var(--h1-size);
     }
-    .card__info{
-        & div:nth-child(1){
-            & h4{
-                font-size: var(--h4-size);
-            }
-        }
+
+    .card__image{
+        width: 340px;
+        height: 100%;
+    }
+    .news__title{
+        font-size: var(--h4-size);
     }
     .section__h2{
         font-size: var(--h2-size);
@@ -317,11 +300,9 @@ News & Events */
         flex-direction: row;
         display: flex;
         gap: 20px;
-        & div{
-            & img{
-                width: 100%;
-                height: auto;
-            }
-        }
+    }
+    .news__image{
+        width: 100%;
+        height: auto;
     }
 }
