--- a/css/header.css
+++ b/css/header.css
@@ -9,40 +9,46 @@ nav{
 }
 
 .nav__link-favicon{
-    width: 50px !important;
+    width: 50px;
 }
 .nav__link{
     filter: drop-shadow( 15px 12px 8px black);
-    & img{
-        width: 176px;
-        height: 47px;
-    }
+}
+
+.nav__link-img{
+    width: 176px;
+    height: 47px;
 }
 
 .nav__menu{
     padding-inline: 10%;
-    & ul{
-        display: flex;
-        flex-direction: row;
-        & li{
-            list-style: none;
-            margin: 15px 24px;
-            cursor: pointer;
-            & a{
-                color: var(--p-color);
-                text-decoration: none;
-                font-size: var(--p-size);
-                font-weight: bolder;
-                text-shadow: 0px 0px 10px rgb(137, 135, 135);
-            }
-            & a:hover{
-                color: var(--primary-color);
-            }
-            & a:active, a:focus{
-                color: var(--primary-color);
-            }
-        };
-    }
+}
+
+.nav__list{
+    display: flex;
+    flex-direction: row;
+}
+
+.nav__item{
+    list-style: none;
+    margin: 15px 24px;
+    cursor: pointer;
+}
+
+.nav__item-link{
+    color: var(--p-color);
+    text-decoration: none;
+    font-size: var(--p-size);
+    font-weight: bolder;
+    text-shadow: 0px 0px 10px rgb(137, 135, 135);
+}
+
+.nav__item-list:hover{
+    color: var(--primary-color);
+}
+
+.nav__item-link:active, .nav__item-link:focus{
+    color: var(--primary-color);
 }
 
 .nav__button{
@@ -81,38 +87,37 @@ nav{
 
 /* MEDIA */
 @media (max-width: 992px){
-    .nav__menu{
-        padding-inline: 0px;
-        & ul{
-            & li{
-                margin: 15px 12px;
-            }
-        }
+    .nav__item{
+        margin: 15px 12px;
+        text-align: center;
     }
+
+    .nav__list{
+        flex-direction: column;
+    }
+
     .nav__button-menu{
         display: block;
         box-shadow: 0px 0px 20px rgb(137, 135, 135);
     }
+
     .nav__button{
         display: none;
     }
+
     .nav__button_hide{
         display: inline-block;
         margin: auto;
         margin-bottom: 10px;
     }
+
     .nav__menu{
+        padding-inline: 0px;
         display: none;
         position: absolute;
         top: 90px;
         width: 100%;
         z-index: 99999;
-        & ul{
-            flex-direction: column;
-            & li{
-                text-align: center;
-            }
-        }
     }
     
     .active{
@@ -120,6 +125,7 @@ nav{
         background-color: var(--secondary-color);
         box-shadow: 10px 10px 50px;
     }
+    
     .nav{
         justify-content: space-around;
         position: fixed;
