--- a/css/header.css
+++ b/css/header.css
@@ -61,10 +61,11 @@ nav{
     font-size: var(--h6-size);
     cursor: pointer;
     box-shadow: 0px 0px 20px rgb(137, 135, 135);
-    &:hover{
-        background-color: brown;
-        transition: 0.5s ease all;
-    }
+}
+
+.nav__button:hover{
+    background-color: brown;
+    transition: 0.5s ease all;
 }
 
 .nav__button_hide{
@@ -79,10 +80,13 @@ nav{
     border-radius: 5px;
     cursor: pointer;
     display: none;
-    & i{
-        font-size: 30px;
-    }
 }
+
+.ri-menu-line{
+    font-size: 30px;
+    color: black;
+}
+
 
 
 /* MEDIA */
