--- a/css/story.css
+++ b/css/story.css
@@ -30,11 +30,6 @@
   font-weight: 900;
 }
 
-@media (min-width: 992px) {
-  .story__content h1 {
-    font-size: var(--h1-size);
-  }
-}
 
 /* main */
 .story {
@@ -45,17 +40,6 @@
 .story__news {
   padding-inline: 16px;
   padding-top: 110px;
-}
-
-@media (min-width: 992px) {
-  .story__news {
-    padding-inline: 2rem;
-  }
-  .story__news-grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    align-items: center;
-  }
 }
 
 .story__news-text {
@@ -70,12 +54,6 @@
   align-items: center;
   justify-content: center;
   gap: 1rem;
-}
-
-@media (min-width: 992px) {
-  .story__news-buttons {
-    flex-direction: row;
-  }
 }
 
 .story__news-button-check,
@@ -132,23 +110,11 @@
   text-align: center;
   font-weight: 700;
 }
-@media (min-width: 992px) {
-  .story__main-heading {
-    font-size: 3.2rem;
-  }
-}
+
 .story__grid {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-@media (min-width: 992px) {
-  .story__grid {
-    flex-direction: row;
-    justify-content: center;
-    gap: 2rem;
-  }
 }
 
 .story__grid-item {
@@ -158,11 +124,6 @@
 .story__team-image {
   max-width: 90vw;
   max-height: 50vh;
-}
-@media (min-width: 576px) {
-  .story__team-image {
-    max-width: 30vw;
-  }
 }
 .story__team-heading {
   font-size: 1.2rem;
@@ -188,25 +149,11 @@
   padding-bottom: 110px;
 }
 
-@media (min-width: 992px) {
-  .story__newsletter-grid {
-    grid-template-rows: repeat(1, 1fr);
-    grid-template-columns: repeat(2, 1fr);
-    align-items: center;
-    gap: 2rem;
-  }
-}
-
 .story__newslatter-image {
   max-width: 80vw;
   max-height: 50vh;
   border-radius: 50%;
   margin: 1rem auto;
-}
-@media (min-width: 992px) {
-  .story__newslatter-image {
-    max-width: 30vw;
-  }
 }
 .story__newsletter-content {
   width: 100vw;
@@ -215,11 +162,6 @@
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
-}
-@media (min-width: 992px) {
-  .story__newsletter-content {
-    width: 100%;
-  }
 }
 .story__newsletter-content form {
   width: 80%;
@@ -279,4 +221,57 @@
 .story__newslatter-label {
   color: var(--p-color);
   font-size: 0.9rem;
+}
+
+
+/* Media */
+@media (min-width: 992px) {
+  .story__news {
+    padding-inline: 2rem;
+  }
+  
+  .story__news-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+  }
+
+  .story__content h1 {
+    font-size: var(--h1-size);
+  }
+
+  .story__news-buttons {
+    flex-direction: row;
+  }
+
+  .story__main-heading {
+    font-size: 3.2rem;
+  }
+
+  .story__grid {
+    flex-direction: row;
+    justify-content: center;
+    gap: 2rem;
+  }
+
+  .story__newsletter-grid {
+    grid-template-rows: repeat(1, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    gap: 2rem;
+  }
+
+  .story__newslatter-image {
+    max-width: 30vw;
+  }
+
+  .story__newsletter-content {
+    width: 100%;
+  }
+}
+
+@media (min-width: 576px) {
+  .story__team-image {
+    max-width: 30vw;
+  }
 }
