--- a/css/home.css
+++ b/css/home.css
@@ -86,7 +86,6 @@ inlcudes cards */
     justify-content: center;
     font-size: var(--h2-size-res);
     margin-bottom: 48px;
-    margin-top: 120px;
 }
 
 .section__container{
@@ -125,6 +124,38 @@ inlcudes cards */
     font-size: 18px;
 }
 
+.card__price{
+        background: var(--white-color);
+        border-radius: 100px;
+        color: var(--secondary-color);
+        font-weight: 900;
+        display: inline-block;
+        width: 84px;
+        height: 64px;
+        line-height: 64px;
+        text-align: center;
+        box-shadow: 0px 0px 50px rgba(0, 0, 0, .175);
+}
+
+.card__rating{
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    margin-block: 5px;
+}
+
+.card__rating-title{
+    font-size: var(--h6-size-res);
+}
+
+.card__rating-star{
+    gap: 0;
+}
+
+.card__rating-review{
+    color: var(--p-color);
+}
+
 .news__header{
     align-items: center;
     display: flex;
@@ -148,7 +179,6 @@ inlcudes cards */
     color: #f3d634;
     font-size: 18px;
 }
-
 
 /** Third section 
 Static image */
@@ -210,11 +240,6 @@ News & Events */
 .news__image{
     width: 100%;
     height: 100%;
-}
-
-.new__image:hover{
-    transform: scale(1.3);
-    transition: all 0.3s ease 0s;
 }
 
 .event__tag{
@@ -292,7 +317,7 @@ News & Events */
         flex-direction: row;
     }
 
-    .section_news{
+    .{
         flex-direction: row;
         display: flex;
         gap: 20px;
